classdojo-debit-system/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: classdojo-system
  labels:
    name: classdojo-system
    app: classdojo-debit-system
